@@ -14,11 +14,12 @@ import java.net.URLEncoder;
 public final class CodeUtil {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(CodeUtil.class);
+    private static final String UTF_8 = "UTF-8";
 
     public static String encodeURL(String source) {
         String target;
         try {
-            target = URLEncoder.encode(source, "UTF-8");
+            target = URLEncoder.encode(source, UTF_8);
         } catch (UnsupportedEncodingException e) {
             LOGGER.error("encode url failure", e);
             throw new RuntimeException(e);
@@ -29,7 +30,7 @@ public final class CodeUtil {
     public static String decodeURL(String source) {
         String target;
         try {
-            target = URLDecoder.decode(source, "UTF-8");
+            target = URLDecoder.decode(source, UTF_8);
         } catch (UnsupportedEncodingException e) {
             LOGGER.error("decode url failure", e);
             throw new RuntimeException(e);
